--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <option value="quick">Quick Sort</option>
         </select>
         <button onclick="init()">init</button>
+        <button onclick="window.location.href='indexP.html'">Watch Full Comparison</button>
     </div>
     <div class="details">
         <span>Name</span>
