--- a/indexP.html
+++ b/indexP.html
@@ -8,11 +8,12 @@
 </head>
 <body>
     <h1>Sorting Visualizer</h1>
-    <audio id="sortAudio" src="bubble-sort-33294.mp3" type="audio/mp3"></audio>
 
 
     <div class="initButton">
         <!-- <span style="font-family: 'Courier New', Courier, monospace;">Enter The Total Number of Bars :- </span> -->
+        <input type="number" name="bars" id="size" style="border-radius: 15px; height: 30px; width: 300px;" placeholder="Enter The Total Number of Bars :- Ex: 50">
+        <span>--OR--</span>
         <button onclick="initArrays()">New Initialsation</button>
     </div>
 
